--- a/archangel-arch/polybar/config.ini
+++ b/archangel-arch/polybar/config.ini
@@ -1,40 +1,59 @@
+;=========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
+;==========================================================
+
+
 [colors]
-background = #101010
+background = #00000000
 background-alt = #373B41
 foreground = #f5f5d5
-primary = #A54242 
+primary = #ADADAD 
 secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+alert = #ADADAD
+disabled = #909090
+
 
 [bar/main]
-
 width = 100%
 height = 24pt
+
+wm-restack = bspwm
+monitor = DP-4
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 4pt
 
-border-size = 0pt
-border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-module-margin = 1
 
-separator = | 
+separator = "  " 
 separator-foreground = ${colors.disabled}
 
-font-0 = Blex Mono Nerd Font:pixelsize=14;3
+font-0 = Agave Nerd Font:pixelsize=14;1
 
 modules-left = xworkspaces
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -54,33 +73,48 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
+
 [module/filesystem]
 type = internal/fs
 interval = 25
 
 mount-0 = /
+format-mounted-prefix = "SPACE "
+label-mounted = %percentage_used%%
+format-mounted-underline = ${colors.foreground}
 
-label-mounted = %{F#A54242}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
+label-unmounted = UNMOUNTED
 label-unmounted-foreground = ${colors.disabled}
+format-unmounted-underline = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume = <ramp-volume> <label-volume>
 
 label-volume = %percentage%%
-
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+ramp-volume-0 = ▁
+ramp-volume-1 = ▂
+ramp-volume-2 = ▃
+ramp-volume-3 = ▄
+ramp-volume-4 = ▅
+ramp-volume-5 = ▆
+ramp-volume-6 = ▇
+ramp-volume-7 = █
+
+format-volume-underline = #cc4165
+format-muted-underline = ${colors.disabled}
+
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
+format-underline = #4444aa
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
 
@@ -89,12 +123,14 @@ label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
+
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
+format-underline = #553388
 
 [module/cpu]
 type = internal/cpu
@@ -102,36 +138,36 @@ interval = 2
 format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+format-underline = #44aaaa
 
 [network-base]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
+format-connected-foreground = #44aa44
+format-connected-underline = #44aa44
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+format-disconnected-foreground = #aa4444
+format-disconnected-underline = #aa4444
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#A54242}%ifname%%{F-} %local_ip%
+format-prefix = "ETH "
+label-connected = connected
+label-disconnected = disconnected
+
 
 [module/date]
 type = internal/date
 interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
+date = %a %H:%M
+date-alt = %A %H:%M:%S
 label = %date%
 label-foreground = ${colors.primary}
+format-underline = #ffabac
 
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
 
-; vim:ft=dosini
